--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "itop100",
     "version": "0.1.0",
-    "private": true,
+    "private": false,
+    "homepage": "https://github.com/AlexYurchenk/test",
     "dependencies": {
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
@@ -14,6 +15,7 @@
         "@types/react": "^18.0.31",
         "@types/react-dom": "^18.0.11",
         "axios": "^1.3.4",
+        "gh-pages": "^5.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-dotenv": "^0.1.3",
@@ -26,7 +28,9 @@
         "start": "react-dotenv && react-scripts start",
         "build": "react-dotenv && react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
